# baboons-on-the-move

./: .gitattributes  .gitignore  .pylintrc  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  Pipfile  README.md  Vagrantfile  __init__.py  __main__.py  area.ipynb  baboon_plots.ipynb  baseline.txt  cli  cli-linux  cli-mac  cli.cmd  cli.ps1  cli.py  conda_requirements.txt  config.py  config.yml  config_declaration.yml  defaults.yml  detect_baboons.py  detect_blobs.py  displacement_mixture.pickle  docker-compose.yml  generate_baboons.py  generate_history_of_dissimilarity_ver1.txt  generate_mask.py  index.html  main.py  metrics.ipynb  mixture_model_gen.py  noise_reduction.py  old.py  optimize.sh  (+14 more)
.github/workflows/: codeql-analysis.yml  cpp-docker-build.yml  cpp-docker-environment.yml  main-build.yml  python-app.yml  python-docker-build.yml  python-main-build.yml  stale.yml
baboon-tracking/: BaboonDetector.py  BaboonTracker.py  detect_baboons.py  image_diff.py  object_tracking.py  registration.py
baboon-tracking/background_subtraction/: dronefootagetest.py
baboon-tracking/variable_background_tracking/: .gitignore  registration.py
baboon_bench/: pretty_times.py
baboon_tracking/: BaboonDetector.py  BaboonTracker.py  ImageStreamServer.py  __init__.py  blob_detection.py  foreground_extraction.py  image_diff.py  object_tracking.py  registration.py
baboon_tracking/background_subtraction/: opticalflow.py
baboon_tracking/blob_detection/: __init__.py  blobCentroids.py  default_opencv.py  interface.py
baboon_tracking/foreground_extraction/: ForegroundExtraction.py  __init__.py  interface.py  simple_background_sub.py  variable_background_sub.py
baboon_tracking/models/: config.py  frame.py  kmean_clustering.ipynb  video.py
baboon_tracking/object_tracking/: Tracking.py  __init__.py  interface.py  kalman.py
baboon_tracking/registration/: Registration.py  __init__.py  fft.py  interface.py  orb_ransac.py
baboon_tracking/variable_background_tracking/: blob_detection.py
baboons_on_the_move/: __main__.py
baboons_on_the_move/baseline/: baseline_baboon_tracker.py
baboons_on_the_move/cli_plugins/: baseline.py  calculate_metrics.py  compare.py  data.py  dataset.py  docs.py  download_parameters.py  encrypt_decrypt.py  format_files.py  generate.py  lint.py  optimize.py  plugins.yaml  render_dataset.py  run.py  test.py  utils.py
baboons_on_the_move/pipeline/: __init__.py  config_serial.py  library_config.py
baboons_on_the_move/scripts/: detect_blobs.py
backgroundsubtraction/: backgroundsubtraction.py
backgroundsubtraction/cpp/: CMakeLists.txt  DisplayImage
clustering/: clustering_filter.py
cxx/: CMakeLists.txt  Dockerfile.CPU  Dockerfile.CUDA  README.md  cli
cxx/.devcontainer/: Dockerfile  devcontainer.json
cxx/src/: constant_velocity_kalman_filter.cpp  cv_specializations.h  historical_frame_container.h  keypoint_descriptor_container.h  main.cpp  pipes.h  sortable_frame.h
cxx/src/drake/common/: drake_assert_and_throw.cpp  drake_throw.h  is_approx_equal_abstol.h  never_destroyed.h
cxx/src/drake/math/: discrete_algebraic_riccati_equation.cpp
cxx/src/kalman/: discretization.h  kalman_filter.h  steady_state_kalman_filter.h  util.h
cxx/src/util/: thread_pool.cpp  thread_pool.h
cython_docs/: C_foreground_ver1.txt  C_foreground_ver2.txt  conda_bench.txt  generate_weights_ver1.txt  numba_quantize.txt  readme.md
data/: 4_22_2020_mask.mp4_contour.csv
docs/source/: conf.py  index.rst
encrypted/: firebase-key.json.aes  google_drive_credentials.json.aes  nas.json.aes
fft/: .gitignore  __init__.py  registration.py  shift_test.py
kcf_tracking/: Pipfile
ml_data/: 4_22_2020_mask.mp4_blobdetector.csv  DJI_0870_mp4.csv  velocity_model.pkl
opencv_builtin_tracking/: Pipfile
output/: .gitignore  DJI_0870_velocity.csv
phase/: phase.py  phase_exceptions.py  pipeline.py  test.py  test_phase.py
plots/: viso_table_v.csv  viso_table_vi.csv
python/: README.md  baseline.txt  index.html
python/utils/: diff_videos.py
registration_bg_subtraction/: __init__.py  registration.py
research_data/: DJI_0870_velocity.csv
scraper/: __main__.py
scripts/: centroidtracker.py  generate_velocities.py  getCentroids.py  getCentroidsTracking.py  kmean_clustering.ipynb  measure_accuracy.ipynb  measure_accuracy.py  measure_velocity.ipynb  pyenv-management.py  research_centroids.py  testdata.txt  xml_velocities.py  xml_velocities2.py
src/: config.py  config.yml  constant_velocity_kalman_filter.h  cv_specializations.h  frame.h  main.cpp  main.py  motion_detecting_pipes.cpp  pipeline.h  pipes.h  preprocessing_pipes.cpp  ssc.h  utilities.py
src/baboon_tracking/: ImageStreamServer.py  __init__.py  baboon_tracker.py  csv_particle_filter_pipeline.py  dataset_viewer_pipeline.py  motion_tracker_pipeline.py  preset_pipelines.py  sqlite_particle_filter_pipeline.py
src/baboon_tracking_old/: BaboonTracker.py  ImageStreamServer.py  __init__.py
src/baseline/: __init__.py  baseline_baboon_tracker.py
src/cli_plugins/: baseline.py  calculate_metrics.py  chart.py  cli_plugin.py  code.py  compare.py  data.py  dataset.py  docs.py  download_parameters.py  encrypt_decrypt.py  format_files.py  generate.py  gui.py  gui_plugin.py  install.py  lint.py  optimize.py  plot.py  plugins.json  render_dataset.py  run.py  shell.py  test.py  utils.py
src/gui/: app.kv  app.py  baboon_tracker_thread.py  file_picker_screen.py  main_frame.py  main_screen.py  progress.py  progress_screen.py
test/: test_BaboonTracker.py  test_ImageStream.py  test_ImageStreamServer.py
ui/: flask_server.py  package-lock.json  package.json  server.js
utils/: Dockerfile  ImageStreamClient.py  ImageStreamServer.py  XMLtotxt.py  bench.py  diff_videos.py  docker_push.sh  drawBoundingBoxes.py  get_metrics.py  iden_check.py  import_xml.py  setup.py
variable_background_tracking/: README.md  __init__.py  __init__2.py  benchmark.py  blob_detection.py  config.py  diff_intersects.py  diff_videos.py  foreground_extraction.py  registration.py  test_dilate.py  trackingfunctions.py
xml&velocities/: DJI_0870_velocity.csv
(+295 files in other folders)
