[tool.poetry]
name = "baboon-tracking"
version = "0.1.0"
description = ""
authors = ["Christopher L. Crutchfield <ccrutchf@ucsd.edu>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "1.22"
opencv-python = "^4.7.0.72"
opencv-contrib-python = "^4.7.0.72"
tqdm = "^4.65.0"
pyAesCrypt = "^6.0.0"
colorama = "^0.4.6"
Rx = "^3.2.0"
Sphinx = "^7.0.1"
pandas = "^2.0.1"
scikit-image = "^0.20.0"
pytest = "^7.3.1"
matplotlib = "^3.7.1"
google-api-python-client = "^2.87.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.6" # Cannot upgrade this version.
firebase-admin = "^6.1.0"
numba = "^0.57.0"
Pillow = "^9.5.0"
PyYAML = "^6.0"
scikit-learn = "^1.2.2"
synology-api = "^0.6.2"
jupyter = "^1.0.0"
GitPython = "^3.1.31"
sherlock = { git = "https://github.com/KastnerRG/sherlock.git", branch = "feature/pypi" }
ipykernel = "^6.23.1"
backoff = "^2.2.1"
py7zr = "^0.20.5"
protobuf = "^4.23.1"
tensorflow = "^2.12.0"
wakepy = "^0.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.17.4"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
